css/styles.css
/* ... */
.form-field {
  margin-bottom: 8px;
}

.form-label {
  display: block;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: #8e8f99;
  margin-bottom: 4px;
}

.input-wrapper {
  position: relative;
}

.form-input {
  width: 100%;
  height: 40px;
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 4px;
  padding-left: 38px;
  background-color: transparent;
  outline: transparent;
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.form-input:focus {
  border-color: #4d5ae5;
}

.input-icon {
  position: absolute;
  left: 16px;
  top: 50%;
  transform: translateY(-50%);
  fill: #2e2f42;
  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.form-input:focus + .input-icon {
  fill: #4d5ae5;
}

.form-field-comment {
  margin-bottom: 16px;
}

.form-textarea {
  width: 100%;
  height: 120px;
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: rgba(46, 47, 66, 0.4);
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 4px;
  padding: 8px 16px;
  resize: none;
  background-color: transparent;
  outline: transparent;
  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.form-textarea:focus {
  border-color: #4d5ae5;
}

.form-input,
.form-textarea {
  outline: none;
}

.form-checkbox-wrapper {
  margin-bottom: 24px;
}

.checkbox-label {
  font-size: 12px;
  line-height: 1.17;
  letter-spacing: 0.04em;
  color: #8e8f99;
}

.custom-checkbox {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border: 1px solid rgba(46, 47, 66, 0.4);
  border-radius: 2px;
  transition:
    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  fill: transparent;
  margin-right: 8px;
}

.checkbox-icon {
  opacity: 0;
  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.checkbox-input:checked + .checkbox-label .custom-checkbox {
  background-color: #404bbf;
  border: none;
  fill: #f4f4fd;
}

.checkbox-input:checked + .checkbox-label .checkbox-icon {
  opacity: 1;
}

.privacy-link {
  color: #4d5ae5;
  text-decoration: underline;
}

.submit-btn {
  display: block;
  min-width: 169px;
  height: 56px;
  margin: 0 auto;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: #ffffff;
  background-color: #4d5ae5;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.submit-btn:hover,
.submit-btn:focus {
  background-color: #404bbf;
}

@media screen and (min-width: 768px) {
  .modal {
    width: 408px;
    min-height: 584px;
    padding: 72px 24px 24px 24px;
  }
}
/* #endregion ===== ===== ===== MODAL ===== ===== ===== */

/* #region ===== ===== ===== MOBILE MENU ===== ===== ===== */
.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #fff;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transition:
    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-menu.is-open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}

.mobile-menu-container {
  position: relative;
  padding-top: 72px;
  padding-bottom: 40px;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.mobile-menu-close {
  position: absolute;
  top: 24px;
  right: 24px;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #e7e9fc;
  border: 1px solid rgba(0, 0, 0, 0.1);
  padding: 0;
  cursor: pointer;
  transition:
    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-menu-close:hover,
.mobile-menu-close:focus {
  background-color: #404bbf;
  border: none;
  fill: #fff;
}

.mobile-nav {
  margin-bottom: auto;
}

.mobile-nav-list {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.mobile-nav-link {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.12;
  letter-spacing: 0.02em;
  color: #2e2f42;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-nav-link.current {
  color: #404bbf;
}

.mobile-address-list {
  display: flex;
  flex-direction: column;
  gap: 24px;
  margin-bottom: 48px;
}

.mobile-address-link {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #434455;
  font-style: normal;
}

.mobile-address-link[href^="tel"] {
  color: #4d5ae5;
}

.mobile-socials-list {
  display: flex;
  gap: 40px;
}

.mobile-socials-link {
  width: 40px;
  height: 40px;
  background-color: #4d5ae5;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-socials-icon {
  fill: #f4f4fd;
}

@media screen and (min-width: 768px) {
  .mobile-menu {
    display: none;
  }
}
/* #endregion ===== ===== ===== MOBILE MENU ===== ===== ===== */

